# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

config("spanstring_public_config") {
  include_dirs = [
    "${ace_root}/interfaces/inner_api/span_string"
  ]
}

config("preview_config") {
  visibility = [ ":*" ]
  if (use_mingw_win) {
    defines = [
      "PREVIEW",
      "WINDOWS_PLATFORM",
    ]
  } else if (use_mac) {
    defines = [
      "PREVIEW",
      "MAC_PLATFORM",
    ]
  } else if (use_linux) {
    defines = [
      "PREVIEW",
      "LINUX_PLATFORM",
    ]
  }
}

ohos_shared_library("ace_htmlconvert") {
  if (current_os == "ohos") {
    sanitize = {
      integer_overflow = true
      boundary_sanitize = true
      debug = ace_sanitize_debug
    }
  }

  public_configs = [ ":spanstring_public_config" ]

  configs = [
    ":preview_config",
  ]

  sources = [
    "${ace_root}/interfaces/inner_api/span_string/html_convert.cpp"
  ]

  subsystem_name = ace_engine_subsystem
  innerapi_tags = [ "platformsdk_indirect" ]
  part_name = ace_engine_part
}

