# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/arkui/ace_engine/test/unittest/ace_unittest.gni")

module_output_path = "capi_benchmarktest/button"

config("capi_bm_config") {
  include_dirs = [ 
    "../",
    "$ace_root/frameworks/core/interfaces/native/generated/interface/",
    "$ace_root/frameworks/",
    "$ace_root/",
  ]
  cflags = [
    "-Wno-unused-variable",
  ]
}

source_set("capi_bm_deps") {
  testonly = true
  public_configs = [ ":capi_bm_config" ]
  public_external_deps = [
    "benchmark:benchmark",
    "googletest:gmock_main",
  ]
}

ace_unittest("ButtonBM_CAPI") {
  type = "new"
  module_out_path = module_output_path
  
  sources = [
    "button_benchmark_test.cpp",
  ]

  extra_deps = []
  extra_deps += [
    ":capi_bm_deps",
    "$ace_root/test/unittest/capi:ace_core_interfaces_native_node_linux_unittest",
    "$ace_root/test/unittest/capi/stubs:capi-ut-stubs", 
    "$ace_root/build:libace",
    "$ace_root/build:libace_compatible",
    "$ace_root/build:libace_engine_pa_ark",
  ]
}
