# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/test.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")
module_output_path = "ace_engine/ace_engine"

##############################fuzztest##########################################
ohos_fuzztest("AceResKeyParserFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//foundation/arkui/ace_engine/test/fuzztest/acereskeyparser_fuzzer"
  sources = [
    #fuzz
    "$ace_root/frameworks/base/resource/ace_res_key_parser.cpp",
    "$ace_root/frameworks/core/common/container_scope.cpp",
    "$ace_root/test/fuzztest/acereskeyparser_fuzzer/acereskeyparser_fuzzer.cpp",
  ]

  deps = [
    "$ace_root/frameworks/base:ace_memory_monitor_ohos",
    "$ace_root/test/unittest:ace_unittest_log",
    "$ace_root/test/unittest:ace_unittest_trace",
    "$cjson_root:cjson_static",
  ]

  configs = [ "$ace_root/test/fuzztest:ace_fuzz_config" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":AceResKeyParserFuzzTest",
  ]
}
###############################################################################
