# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

#####################hydra-fuzz###################
import("//foundation/arkui/ace_engine/ace_config.gni")
module_output_path = "ace_engine/ace_engine/arkressched"

##############################fuzztest##########################################
ohos_fuzztest("ArkResschedFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//foundation/arkui/ace_engine/test/fuzztest/arkressched_fuzzer"

  sources = [
    "$ace_root/adapter/ohos/osal/ressched_report.cpp",
    "$ace_root/frameworks/base/ressched/ressched_report.cpp",
    "$ace_root/frameworks/core/common/container_scope.cpp",
    "$ace_root/test/mock/core/common/mock_ace_application_info.cpp",
    "arkressched_fuzzer.cpp",
  ]

  configs = [ "$ace_root/test/fuzztest:ace_fuzz_config" ]

  deps = [
    "$ace_root/frameworks/base:ace_memory_monitor_ohos",
    "$ace_root/test/unittest:ace_unittest_log",
    "$ace_root/test/unittest:ace_unittest_trace",
    "$cjson_root:cjson_static",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":ArkResschedFuzzTest",
  ]
}
###############################################################################
